# treasury-contract

./: .gitignore  Cargo.toml  NOTICE
.github/workflows/: Basic.yml  cov.yml
data/feat/add-minium-receive-to-requirements/: coverage.xml
data/feat/add-slippage-per-trade/: coverage.xml
data/feat/add-whitelist-executors-for-collect-fees/: coverage.xml
data/feat/aggregate-swap/: coverage.xml
data/feat/swap-by-ammv3/: coverage.xml
data/master/: coverage.xml
data/test/cov-report/: coverage.xml
data/test/cov-report-change/: coverage.xml
src/: contract.rs  error.rs  helpers.rs  lib.rs  msg.rs  multitest.rs  state.rs
src/multitest/: contract.rs  contract_ping_pong_mock.rs  mock_cw20_contract.rs  mock_router_contract.rs  tests.rs
