[package]
name = "tresury"
version = "0.1.0"
authors = ["meomeocoj <minh.nt@orai.io>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/optimizer:0.15.0
"""

[dependencies]
cosmwasm-std = { version = "1.5", features = ["stargate"] }
cosmwasm-schema = { version = "1.5" }
cosmwasm-storage = { version = "1.5" }
thiserror = "1.0.26"
cw2 = { version = "1.0.1" }
cw20 = { version = "1.0.1" }
cw20-base = { version = "1.0.1", features = ["library"] }
cw-storage-plus = { version = "1.0.1" }
schemars = "0.8.15"
serde = { version = "1.0.189", default-features = false, features = ["derive"] }
cosmos-sdk-proto = { version = "=0.19.0", default-features = false, features = [
  "cosmwasm",
] }
oraiswap = { git = "https://github.com/oraichain/oraiswap", branch = "feat/update-cosmwasm-std-1.5" }
protobuf = "=3.2.0"

[dev-dependencies]
cw-multi-test = { git = "https://github.com/CosmWasm/cw-multi-test" }
